--- a/style.css
+++ b/style.css
@@ -61,3 +61,10 @@ button:hover{
 button:active{
     opacity: 0.6;
 }
+
+@media screen and (max-width: 768px) {
+    img{
+        width: 300px;
+        height: 200px;
+    }
+}
